# BrowserBook

./: README.md  main.py  pyproject.toml
BrowserBook/: README.md  pyproject.toml
BrowserBook/browserbook/: __init__.py  browserbookcode.py  ezbrbk.py
BrowserBook/tests/: test_browserbook.py
DEADlib/: browserbookcode.py  ezbrbk.py
DEADlib/tools/: URIreader (copy).py  canOpener.py
