[tool.poetry]
name = "BrowserBook"
version = "0.1.5"
description = "A web browser backend. Gets all data needed from a url. Multiple sessions at once is possible"
authors = ["DragonHunter"]
readme = "README.md"
license = "MIT"
keywords = ['WebBrowser','Backend']

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
